reword instructions, clean up whitespace in in scripts.js and styles.css, no longer use show and hide jquery method because this action was moved to mine and example classes in my css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,4 @@
-html {
-  height: 100%;
-}
-
-body {
+html, body {
   width: 100%;
   height: 100%;
 }
@@ -30,19 +26,6 @@ body.example {
   border-radius: 10px;
 }
 
-#sidebar {
-  display: none;
-}
-
-.mine#content {
-  border-radius: 10px;
-  background-color: #c0ded9;
-}
-
-div.example {
-  padding: 10px;
-}
-
 .example#title {
   margin-top: 0;
   margin-bottom: 15px;
@@ -50,6 +33,10 @@ div.example {
   width: 100%;
   text-align: center;
   background-color: #ffe6b3;
+}
+
+.mine#sidebar {
+  display: none;
 }
 
 .example#sidebar {
@@ -71,8 +58,17 @@ div.example {
   color: blue;
 }
 
+.mine#content {
+  border-radius: 10px;
+  background-color: #c0ded9;
+}
+
 .example#content {
   float: left;
   width: 65%;
   height: 100%;
+}
+
+div.example {
+  padding: 10px;
 }
